fix: no horizontal overflow in sponsor section

--- a/src/routes/LandingPage/SponsorSection/index.scss
+++ b/src/routes/LandingPage/SponsorSection/index.scss
@@ -13,18 +13,6 @@
     justify-content: space-between;
     overflow-inline: hidden;
 
-    .sponsor-button-cont {
-      .sponsor-button {
-        color: white;
-        text-align: center;
-        background-color: $dark-purple;
-        font-size: 1rem;
-        display: flex;
-        padding: 0.65em 3ch;
-        border: none;
-      }
-    }
-
     .sponsor-header {
       font-size: 2rem;
       min-width: fit-content;
@@ -63,19 +51,13 @@
       .sponsor-button-cont {
         .sponsor-button {
           display: none;
-          text-align: left;
         }
       }
 
       .sponsor-header {
         font-size: 2rem;
-        display: column;
         text-align: left;
         margin-left: 5%;
-        margin-right: 30%;
-      }
-
-      .sponsor-header {
         margin-bottom: 20px;
       }
     }
